src/App.css
body {
  background-color: #ddd;
}
.App {
  text-align: center;
  width: 760px;
  padding: 1em;
  margin: 5em auto;
   background-color: #fff; 
}

.App-logo {
  animation: App-logo-spin infinite 20s linear;
  height: 80px;
}

.App-header {
  background-color: #222;
  height: 150px;
  padding: 20px;
  color: white;
}

*{
  padding: 0;
  margin: 0;
  box-sizing: border-box;
}

.App-intro {
  font-size: large;
}

@keyframes App-logo-spin {
  from { transform: rotate(0deg); }
  to { transform: rotate(360deg); }
}

.completed label{
  text-decoration: line-through;
  background-color: #ddd;
  color: #888;
}

.hidden {
  /* display: ; */
  opacity: 0;
}

.todo {
  width: 100%;
  height: 40px;
  border: 1px solid #444;
  border-top: 0px;
  display: flex;
  flex-direction: row;
  justify-content: space-between;
  text-align: left;
}
.todo:first-of-type {
  border-top: 1px solid #666;
}

.todo > input[type=checkbox]{
  padding-right: 2em;
  margin: 10px;
}

.todo > label {
  flex: 8;
  font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
  font-size: 20px;
  line-height: 15px;
  margin: .25rem;
  border: 0;
  padding: .25rem;
}

.todo > form {
  flex: 8;
  margin: .25rem;
  border: 0;
  padding: .25rem;
}

.todo > form > input[type=text] {
    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
  font-size: 20px;
  line-height: 15px;
  border: 0;
  width: 100%;
}

.todo-filter {
  display: flex; 
  flex-direction: row;
  justify-content: space-between;
  margin-top: 2rem;
}

.button {
  padding: 12px;
  border: 1px #444 solid;
  border-radius: 20px;
  cursor: pointer;
  font-size: 20px;
  font-weight: 400;
}

.button:active {
  background-color: #444;
  color: #ddd;
}
.button.clicked {
  background-color: #ddd;
  color: #fff;
  cursor: auto;
}

.button.delete {
  display: none;
}

.todo:hover .delete {
  display: block;
}

